--- a/app/src/main/res/layout-large/fragment_custom_registration.xml
+++ b/app/src/main/res/layout-large/fragment_custom_registration.xml
@@ -37,7 +37,6 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="10dp"
-                android:layout_marginTop="22dp"
                 android:layout_marginEnd="10dp"
                 android:layout_weight="1"
                 android:hint="@string/app_mum_name">
@@ -52,79 +51,34 @@
 
             </com.google.android.material.textfield.TextInputLayout>
 
-            <LinearLayout
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:orientation="vertical">
 
-                <TextView
-                    android:layout_width="match_parent"
+                <com.google.android.material.textfield.TextInputLayout
+                    android:id="@+id/til_parity"
+                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                    android:layout_width="0dp"
+                    android:layout_weight="1"
                     android:layout_height="wrap_content"
-                    android:text="@string/app_parity"
-                    android:textAlignment="center"
-                    android:textAppearance="?attr/textAppearanceSubtitle1" />
+                    android:hint="@string/app_parity"
+                    android:layout_marginStart="10dp">
 
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal"
-                    android:weightSum="3">
-
-                    <com.google.android.material.textfield.TextInputLayout
-                        android:id="@+id/til_parity"
-                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-                        android:layout_width="0dp"
+                    <com.google.android.material.textfield.TextInputEditText
+                        android:id="@+id/app_parity"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginStart="10dp"
-                        android:layout_weight="1.3">
+                        android:inputType="textCapSentences"
+                        android:textColorHint="#757575"
+                        android:textSize="12sp" />
 
-                        <com.google.android.material.textfield.TextInputEditText
-                            android:id="@+id/app_parity"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:inputType="textCapSentences"
-                            android:textColorHint="#757575"
-                            android:textSize="12sp" />
-
-                    </com.google.android.material.textfield.TextInputLayout>
-
-                    <TextView
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="0.4"
-                        android:text="@string/app_plus"
-                        android:textAlignment="center"
-                        android:textAppearance="?attr/textAppearanceSubtitle1" />
+                </com.google.android.material.textfield.TextInputLayout>
 
 
-                    <com.google.android.material.textfield.TextInputLayout
-                        android:id="@+id/til_two_parity"
-                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_marginEnd="10dp"
-                        android:layout_weight="1.3">
-
-                        <com.google.android.material.textfield.TextInputEditText
-                            android:id="@+id/app_two_parity"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:inputType="textCapSentences"
-                            android:textSize="12sp" />
-
-                    </com.google.android.material.textfield.TextInputLayout>
-                </LinearLayout>
-
-            </LinearLayout>
 
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/til_ip_number"
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="5dp"
-                android:layout_marginTop="22dp"
+                android:layout_marginStart="10dp"
                 android:layout_marginEnd="5dp"
                 android:layout_weight="1"
                 android:hint="@string/app_ip_number">
@@ -165,6 +119,7 @@
                     android:focusable="false"
                     android:focusableInTouchMode="false"
                     android:importantForAutofill="no"
+                    android:drawableEnd="@drawable/ic_baseline_arrow_drop_down_24"
                     android:inputType="textPersonName"
                     android:textSize="12sp" />
 
@@ -189,6 +144,7 @@
                     android:focusable="false"
                     android:focusableInTouchMode="false"
                     android:importantForAutofill="no"
+                    android:drawableEnd="@drawable/ic_baseline_arrow_drop_down_24"
                     android:inputType="textPersonName"
                     android:textSize="12sp" />
 
@@ -212,6 +168,7 @@
                     android:layout_height="wrap_content"
                     android:cursorVisible="false"
                     android:focusable="false"
+                    android:drawableEnd="@drawable/ic_baseline_arrow_drop_down_24"
                     android:focusableInTouchMode="false"
                     android:importantForAutofill="no"
                     android:inputType="textPersonName"
@@ -295,6 +252,7 @@
                     android:focusableInTouchMode="false"
                     android:importantForAutofill="no"
                     android:inputType="textPersonName"
+                    android:drawableEnd="@drawable/ic_baseline_arrow_drop_down_24"
                     android:textSize="12sp" />
 
             </com.google.android.material.textfield.TextInputLayout>
@@ -324,6 +282,7 @@
                     android:layout_height="wrap_content"
                     android:cursorVisible="false"
                     android:focusable="false"
+                    android:drawableEnd="@drawable/ic_baseline_arrow_drop_down_24"
                     android:focusableInTouchMode="false"
                     android:importantForAutofill="no"
                     android:inputType="textPersonName"
@@ -350,6 +309,7 @@
                     android:focusable="false"
                     android:focusableInTouchMode="false"
                     android:importantForAutofill="no"
+                    android:drawableEnd="@drawable/ic_baseline_arrow_drop_down_24"
                     android:inputType="textPersonName"
                     android:textSize="12sp" />
 
@@ -386,8 +346,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:cursorVisible="false"
-                    android:focusable="false"
                     android:drawableEnd="@drawable/gm_calendar_today_24"
+                    android:focusable="false"
                     android:focusableInTouchMode="false"
                     android:importantForAutofill="no"
                     android:inputType="textPersonName"
@@ -412,6 +372,7 @@
                     android:layout_height="wrap_content"
                     android:cursorVisible="false"
                     android:focusable="false"
+                    android:drawableEnd="@drawable/ic_baseline_arrow_drop_down_24"
                     android:focusableInTouchMode="false"
                     android:importantForAutofill="no"
                     android:inputType="textPersonName"
@@ -532,6 +493,7 @@
                     android:layout_height="wrap_content"
                     android:cursorVisible="false"
                     android:focusable="false"
+                    android:drawableEnd="@drawable/ic_baseline_arrow_drop_down_24"
                     android:focusableInTouchMode="false"
                     android:importantForAutofill="no"
                     android:inputType="textPersonName"
@@ -623,8 +585,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:cursorVisible="false"
-                    android:focusable="false"
                     android:drawableEnd="@drawable/gm_calendar_today_24"
+                    android:focusable="false"
                     android:focusableInTouchMode="false"
                     android:importantForAutofill="no"
                     android:inputType="textPersonName"
@@ -648,8 +610,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:cursorVisible="false"
-                    android:focusable="false"
                     android:drawableEnd="@drawable/gm_schedule_24"
+                    android:focusable="false"
                     android:focusableInTouchMode="false"
                     android:importantForAutofill="no"
                     android:inputType="textPersonName"
