--- a/app/src/main/res/layout/activity_pin_lock.xml
+++ b/app/src/main/res/layout/activity_pin_lock.xml
@@ -29,7 +29,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
-            android:indeterminateTint="@color/white"
+            android:indeterminateTint="@color/colorPrimary"
             android:visibility="gone" />
     </RelativeLayout>
 
