--- a/app/src/main/res/layout/fragment_custom_registration.xml
+++ b/app/src/main/res/layout/fragment_custom_registration.xml
@@ -38,7 +38,6 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="10dp"
-                android:layout_marginTop="22dp"
                 android:layout_marginEnd="10dp"
                 android:layout_weight="2"
                 android:hint="@string/app_mum_name">
@@ -53,72 +52,25 @@
 
             </com.google.android.material.textfield.TextInputLayout>
 
-            <LinearLayout
+
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/til_parity"
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:layout_marginStart="10dp"
                 android:layout_weight="1"
-                android:orientation="vertical">
+                android:hint="@string/app_parity">
 
-                <TextView
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/app_parity"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="@string/app_parity"
-                    android:textAlignment="center"
-                    android:textAppearance="?attr/textAppearanceSubtitle1" />
+                    android:inputType="textCapSentences"
+                    android:textColorHint="#757575"
+                    android:textSize="12sp" />
 
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal"
-
-                    android:weightSum="3">
-
-                    <com.google.android.material.textfield.TextInputLayout
-                        android:id="@+id/til_parity"
-                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_marginStart="10dp"
-                        android:layout_weight="1.3">
-
-                        <com.google.android.material.textfield.TextInputEditText
-                            android:id="@+id/app_parity"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:inputType="textCapSentences"
-                            android:textColorHint="#757575"
-                            android:textSize="12sp" />
-
-                    </com.google.android.material.textfield.TextInputLayout>
-
-                    <TextView
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="0.4"
-                        android:text="@string/app_plus"
-                        android:textAlignment="center"
-                        android:textAppearance="?attr/textAppearanceSubtitle1" />
-
-
-                    <com.google.android.material.textfield.TextInputLayout
-                        android:id="@+id/til_two_parity"
-                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_marginEnd="10dp"
-                        android:layout_weight="1.3">
-
-                        <com.google.android.material.textfield.TextInputEditText
-                            android:id="@+id/app_two_parity"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:inputType="textCapSentences"
-                            android:textSize="12sp" />
-
-                    </com.google.android.material.textfield.TextInputLayout>
-                </LinearLayout>
-
-            </LinearLayout>
+            </com.google.android.material.textfield.TextInputLayout>
 
 
         </LinearLayout>
@@ -168,6 +120,7 @@
                     android:focusable="false"
                     android:focusableInTouchMode="false"
                     android:importantForAutofill="no"
+                    android:drawableEnd="@drawable/ic_baseline_arrow_drop_down_24"
                     android:inputType="textPersonName"
                     android:textSize="12sp" />
 
@@ -198,6 +151,7 @@
                     android:focusable="false"
                     android:focusableInTouchMode="false"
                     android:importantForAutofill="no"
+                    android:drawableEnd="@drawable/ic_baseline_arrow_drop_down_24"
                     android:inputType="textPersonName"
                     android:textSize="12sp" />
 
@@ -223,6 +177,7 @@
                     android:focusable="false"
                     android:focusableInTouchMode="false"
                     android:importantForAutofill="no"
+                    android:drawableEnd="@drawable/ic_baseline_arrow_drop_down_24"
                     android:inputType="textPersonName"
                     android:textSize="12sp" />
 
@@ -312,6 +267,7 @@
                     android:focusableInTouchMode="false"
                     android:importantForAutofill="no"
                     android:inputType="textPersonName"
+                    android:drawableEnd="@drawable/ic_baseline_arrow_drop_down_24"
                     android:textSize="12sp" />
 
             </com.google.android.material.textfield.TextInputLayout>
@@ -337,6 +293,7 @@
                     android:focusable="false"
                     android:focusableInTouchMode="false"
                     android:importantForAutofill="no"
+                    android:drawableEnd="@drawable/ic_baseline_arrow_drop_down_24"
                     android:inputType="textPersonName"
                     android:textSize="12sp" />
 
@@ -366,6 +323,7 @@
                     android:layout_height="wrap_content"
                     android:cursorVisible="false"
                     android:focusable="false"
+                    android:drawableEnd="@drawable/ic_baseline_arrow_drop_down_24"
                     android:focusableInTouchMode="false"
                     android:importantForAutofill="no"
                     android:inputType="textPersonName"
@@ -433,6 +391,7 @@
                     android:focusableInTouchMode="false"
                     android:importantForAutofill="no"
                     android:inputType="textPersonName"
+                    android:drawableEnd="@drawable/ic_baseline_arrow_drop_down_24"
                     android:textSize="12sp" />
 
             </com.google.android.material.textfield.TextInputLayout>
@@ -559,6 +518,7 @@
                     android:focusable="false"
                     android:focusableInTouchMode="false"
                     android:importantForAutofill="no"
+                    android:drawableEnd="@drawable/ic_baseline_arrow_drop_down_24"
                     android:inputType="textPersonName"
                     android:textSize="12sp" />
 
