--- a/app/src/main/res/layout/fragment_discharge.xml
+++ b/app/src/main/res/layout/fragment_discharge.xml
@@ -124,6 +124,7 @@
                         android:focusableInTouchMode="false"
                         android:importantForAutofill="no"
                         android:inputType="textPersonName"
+                        android:drawableEnd="@drawable/ic_baseline_arrow_drop_down_24"
                         android:textSize="12sp" />
                 </com.google.android.material.textfield.TextInputLayout>
 
@@ -155,6 +156,7 @@
                         android:focusable="false"
                         android:focusableInTouchMode="false"
                         android:importantForAutofill="no"
+                        android:drawableEnd="@drawable/ic_baseline_arrow_drop_down_24"
                         android:inputType="textPersonName"
                         android:textSize="12sp" />
                 </com.google.android.material.textfield.TextInputLayout>
