--- a/app/src/main/res/navigation/reference_nav_graph.xml
+++ b/app/src/main/res/navigation/reference_nav_graph.xml
@@ -93,6 +93,9 @@
         <argument
             android:name="patient_id"
             app:argType="string" />
+        <action
+            android:id="@+id/navigate_to_growth"
+            app:destination="@id/growthActivity" />
     </fragment>
     <fragment
         android:id="@+id/babyAssessmentFragment"
@@ -283,5 +286,14 @@
             android:name="patient_id"
             app:argType="string" />
     </fragment>
+    <activity
+        android:id="@+id/growthActivity"
+        android:name="com.intellisoft.nndak.screens.dashboard.growth.GrowthActivity"
+        android:label="@string/app_growth"
+        tools:layout="@layout/activity_growth">
+        <argument
+            android:name="patient_id"
+            app:argType="string" />
+    </activity>
 
 </navigation>
