--- a/app/src/main/res/layout/activity_growth.xml
+++ b/app/src/main/res/layout/activity_growth.xml
@@ -30,7 +30,7 @@
         <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
             android:id="@+id/swipe_refresh_layout"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="wrap_content">
 
             <androidx.cardview.widget.CardView
                 android:id="@+id/card_view"
@@ -72,6 +72,7 @@
 
                         <com.github.mikephil.charting.charts.LineChart
                             android:id="@+id/growth_chart"
+                            android:layout_marginTop="@dimen/_12dp"
                             android:layout_width="match_parent"
                             android:layout_height="match_parent" />
                     </LinearLayout>
