--- a/app/src/main/res/layout/activity_growth.xml
+++ b/app/src/main/res/layout/activity_growth.xml
@@ -27,19 +27,22 @@
         android:padding="@dimen/_5dp"
         app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
+
         <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
             android:id="@+id/swipe_refresh_layout"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="400dp">
 
             <androidx.cardview.widget.CardView
                 android:id="@+id/card_view"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_alignParentTop="true"
                 android:visibility="gone"
                 app:cardCornerRadius="6dp"
                 app:cardElevation="2dp"
                 app:cardUseCompatPadding="true">
+
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -66,15 +69,16 @@
                             android:layout_marginTop="@dimen/_150dp"
                             android:layout_marginBottom="@dimen/_10dp"
                             android:rotation="-90"
-                            android:textSize="@dimen/_12dp"
                             android:text="@string/app_weeks"
-                            android:textAlignment="center" />
+                            android:textAlignment="center"
+                            android:textSize="@dimen/_12dp" />
 
                         <com.github.mikephil.charting.charts.LineChart
                             android:id="@+id/growth_chart"
-                            android:layout_marginTop="@dimen/_12dp"
                             android:layout_width="match_parent"
-                            android:layout_height="match_parent" />
+                            android:layout_height="match_parent"
+                            android:layout_marginTop="@dimen/_12dp"
+                            android:textAlignment="center" />
                     </LinearLayout>
 
                     <TextView
